<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="12dp"
    tools:context=".MainActivity2"
    >

    <TextView
        android:id="@+id/txtview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_view3"
        android:textStyle="bold"
        android:textSize="28dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/l_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view5"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:switchMinWidth="70dp"
            android:checked="true"
            android:textOff="No"
            android:textOn="Yes"
            android:showText="true"
            android:textStyle="bold"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_view4"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/grey"
            android:gravity="center"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:verticalScrollbarPosition="defaultPosition"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/txtview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_view6"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdbtn_1"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:onClick="checkButton"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdbtn_2"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:onClick="checkButton"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdbtn_3"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:onClick="checkButton"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/txtview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:text="@string/txt_view7"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_1"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

        <CheckBox
            android:id="@+id/chkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_2"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@id/chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_3"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

        <CheckBox
            android:id="@+id/chkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_4"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@id/chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_5"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

        <CheckBox
            android:id="@+id/chkbox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkbox_6"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nxt_activity"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"/>

    <TextView
        android:id="@+id/txtview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text=""
        android:layout_gravity="center_horizontal"/>

</LinearLayout>